Trampas de caida triggers funcionando.

--- a/project.json
+++ b/project.json
@@ -19,6 +19,8 @@
         "src/EnemigoPatrulla.js",
         "src/EnemigoTirador.js",
         "src/EnemigoPerseguidor.js",
-        "src/Disparo.js"
+        "src/Disparo.js",
+        "src/Trampa.js",
+        "src/TrampaTirarEncima.js"
     ]
 }
