Added score system (pretty easy tbh)

--- a/project.json
+++ b/project.json
@@ -25,6 +25,7 @@
         "src/TrampaCaer.js",
         "src/Puerta.js",
         "src/recolectables/Llave.js",
-        "src/TrampaRalentizar.js"
+        "src/TrampaRalentizar.js",
+        "src/recolectables/Opcional.js"
     ]
 }
