Se acabo la diversion, llego el comandante y mando a parar

--- a/project.json
+++ b/project.json
@@ -27,6 +27,6 @@
         "src/recolectables/Llave.js",
         "src/TrampaRalentizar.js",
         "src/recolectables/Opcional.js",
-        "src/Montura.js"
+        "src/recolectables/Montura.js"
     ]
 }
