Map interaction complete, every layer is now correctly communicated with the code, "Arma" and "Bomba" base classes have been created, all thats left now is the logic

--- a/project.json
+++ b/project.json
@@ -27,6 +27,8 @@
         "src/recolectables/Llave.js",
         "src/TrampaRalentizar.js",
         "src/recolectables/Opcional.js",
-        "src/recolectables/Montura.js"
+        "src/recolectables/Montura.js",
+        "src/recolectables/Arma.js",
+        "src/recolectables/Bomba.js"
     ]
 }
