--- a/project.json
+++ b/project.json
@@ -13,19 +13,20 @@
     "jsList" : [
         "src/resource.js",
         "src/app.js",
-        "src/ControlesLayer.js",
         "src/Jugador.js",
-        "src/GameScene.js",
-        "src/EnemigoPatrulla.js",
-        "src/EnemigoTirador.js",
-        "src/EnemigoPerseguidor.js",
         "src/Disparo.js",
-        "src/TrampaTirarEncima.js",
-        "src/TrampaDisparo.js",
-        "src/TrampaCaer.js",
         "src/Puerta.js",
+        "src/layers/GameScene.js",
+        "src/layers/ControlesLayer.js",
+        "src/enemigos/EnemigoPatrulla.js",
+        "src/enemigos/EnemigoTirador.js",
+        "src/enemigos/EnemigoPerseguidor.js",
+        "src/enemigos/EnemigoJefe.js",
+        "src/trampas/TrampaTirarEncima.js",
+        "src/trampas/TrampaDisparo.js",
+        "src/trampas/TrampaCaer.js",
+        "src/trampas/TrampaRalentizar.js",
         "src/recolectables/Llave.js",
-        "src/TrampaRalentizar.js",
         "src/recolectables/Opcional.js",
         "src/recolectables/Montura.js",
         "src/recolectables/Arma.js",
