--- a/project.json
+++ b/project.json
@@ -30,6 +30,7 @@
         "src/recolectables/Opcional.js",
         "src/recolectables/Montura.js",
         "src/recolectables/Arma.js",
-        "src/recolectables/Bomba.js"
+        "src/recolectables/Bomba.js",
+        "src/Cuerda.js"
     ]
 }
