--- a/project.json
+++ b/project.json
@@ -31,6 +31,7 @@
         "src/recolectables/Montura.js",
         "src/recolectables/Arma.js",
         "src/recolectables/Bomba.js",
-        "src/Cuerda.js"
+        "src/Cuerda.js",
+        "src/BombaJugador.js"
     ]
 }
