--- a/project.json
+++ b/project.json
@@ -13,25 +13,25 @@
     "jsList" : [
         "src/resource.js",
         "src/app.js",
-        "src/Jugador.js",
-        "src/Disparo.js",
-        "src/Puerta.js",
+        "src/jugador/Jugador.js",
+        "src/jugador/Disparo.js",
+        "src/jugador/BombaJugador.js"
         "src/layers/GameScene.js",
         "src/layers/ControlesLayer.js",
         "src/enemigos/EnemigoPatrulla.js",
         "src/enemigos/EnemigoTirador.js",
         "src/enemigos/EnemigoPerseguidor.js",
         "src/enemigos/EnemigoJefe.js",
-        "src/trampas/TrampaTirarEncima.js",
-        "src/trampas/TrampaDisparo.js",
-        "src/trampas/TrampaCaer.js",
-        "src/trampas/TrampaRalentizar.js",
-        "src/recolectables/Llave.js",
-        "src/recolectables/Opcional.js",
-        "src/recolectables/Montura.js",
-        "src/recolectables/Arma.js",
-        "src/recolectables/Bomba.js",
-        "src/Cuerda.js",
-        "src/BombaJugador.js"
+        "src/mapa/trampas/TrampaTirarEncima.js",
+        "src/mapa/trampas/TrampaDisparo.js",
+        "src/mapa/trampas/TrampaCaer.js",
+        "src/mapa/trampas/TrampaRalentizar.js",
+        "src/mapa/recolectables/Llave.js",
+        "src/mapa/recolectables/Opcional.js",
+        "src/mapa/recolectables/Montura.js",
+        "src/mapa/recolectables/Arma.js",
+        "src/mapa/recolectables/Bomba.js",
+        "src/mapa/Puerta.js",
+        "src/mapa/Cuerda.js"
     ]
 }
